@@ -558,13 +558,18 @@ $.extend($.validator, {
 		},
 		
 		formatAndAdd: function( element, rule ) {
-			var message = this.defaultMessage( element, rule.method );
-			if ( typeof message == "function" ) 
+			var message = this.defaultMessage( element, rule.method ),
+				theregex = /\$?\{(\d+)\}/g;
+			if ( typeof message == "function" ) {
 				message = message.call(this, rule.parameters, element);
+			} else if (theregex.test(message)) {
+				message = jQuery.format(message.replace(theregex, '{$1}'), rule.parameters);
+			}			
 			this.errorList.push({
 				message: message,
 				element: element
 			});
+			
 			this.errorMap[element.name] = message;
 			this.submitted[element.name] = message;
 		},
